--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
 				<div class="container c1" style="margin-top:8em; margin-bottom: 5em; box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);">
 						<div class="row align-items-center" style="padding-left: 1em;padding-right: 1em">
-							<div class="col-5 mx-auto col-md-5 order-md-2 text-center"> <img src="icon/group.png" class="img-fluid" width="350" height="350"> </div>
+							<div class="col-5 mx-auto col-md-5 order-md-2 text-center"> <img src="icon/Group.png" class="img-fluid" width="350" height="350"> </div>
 							<div class="col-md-7 order-md-1 text-center text-md-left pr-md-7">
 								<h3 class="mb-3"><b>Loved by users,</b></h3>
 								<h3 class="mb-3"><b>recommended by experts</b></h3>
